--- a/Full_friends/templates/edit.html
+++ b/Full_friends/templates/edit.html
@@ -5,15 +5,16 @@
     <title>Edit Friend</title>
   </head>
   <body>
-        <form action="/friends/{{friend['id']}}" method="post">
+        {{friend[0]['id']}}
+        <form action="/friends/{{friend[0]['id']}}" method="post">
             <label for="first_name">First Name: </label>
-            <input type="text" name="first_name" value={{friend['first_name']}}>
+            <input type="text" name="first_name" value={{friend[0]['first_name']}}>
             <br>
             <label for="last_name">Last Name: </label>
-            <input type="text" name="last_name" value={{friend['last_name']}}>
+            <input type="text" name="last_name" value={{friend[0]['last_name']}}>
             <br>
             <label for="email">Email: </label>
-            <input type="email" name="email" value={{friend['email']}}>
+            <input type="email" name="email" value={{friend[0]['email']}}>
             <input type="submit" value="Update">
         </form>
 
